@@ -45,6 +45,7 @@ Trond Hasle Amundsen - Template check_openmanage
 Silvan Hunkirchen - Bugreport
 Petr Maizner - Bugreport
 Steve Finkelstein - Bugreport
+Mathias Kettner - xml write delay
 
 ###########################################
 #           NPCD Thanks                   #
